fix image picker overflow

--- a/client/src/app/features/profile/components/update-profile/update-profile.component.scss
+++ b/client/src/app/features/profile/components/update-profile/update-profile.component.scss
@@ -28,14 +28,14 @@ form {
 .profile-image {
   display: flex;
   flex-direction: column;
-  height: 260px;
-  width: 260px;
+  height: 180px;
+  width: 180px;
   align-items: center;
   margin: 1.4rem auto;
 
   img {
-    height: 260px;
-    width: 260px;
+    height: 180px;
+    width: 180px;
   }
 }
 
